@@ -19,7 +19,7 @@ use Test::More qw( );
 use Path::Tiny qw(path);
 
 ## no critic (ValuesAndExpressions::ProhibitConstantPragma,ErrorHandling::RequireCheckingReturnValueOfEval,Subroutines::ProhibitSubroutinePrototypes)
-use constant CAN_DPATH => eval { require Data::DPath; 1 };
+use constant CAN_DPATH    => eval { require Data::DPath;       1 };
 use constant CAN_EQORDIFF => eval { require Test::Differences; 1 };
 sub dpath($);
 BEGIN { CAN_DPATH and Data::DPath->import('dpath') }
@@ -99,9 +99,10 @@ sub _subtest_prereqs_deeply {
   $self->tb->ok( defined $meta, 'distmeta defined' );
   $self->tb->note( $self->tb->explain( $meta->{prereqs} ) );
 
-  if ( CAN_EQORDIFF ) {
+  if (CAN_EQORDIFF) {
     Test::Differences::eq_or_diff( $meta->{prereqs}, $prereqs, 'Prereqs match expected set' );
-  } else {
+  }
+  else {
     Test::More::is_deeply( $meta->{prereqs}, $prereqs, 'Prereqs match expected set' );
   }
   return;
@@ -199,9 +200,10 @@ sub _subtest_meta_path_deeply {
   my (@results) = dpath($expression)->match( $self->builder->distmeta );
   $self->tb->ok( @results > 0, "distmeta matched expression $expression" );
   $self->tb->note( $self->tb->explain( \@results ) );
-  if ( CAN_EQORDIFF ) {
+  if (CAN_EQORDIFF) {
     Test::Differences::eq_or_diff( \@results, $expected, 'distmeta matched expectations' );
-  } else {
+  }
+  else {
     Test::More::is_deeply( \@results, $expected, 'distmeta matched expectations' );
   }
   return;
