@@ -1,6 +1,11 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.001003
+ [Added / develop requires]
+ - Test::Differences
+
+ [Added / runtime recommends]
+ - Test::Differences
 
 1.001002 2014-08-21T05:38:29Z
  [Changed / develop suggests]
